RESOLVED FIXED299577
Always-on scrollbars are not symmetrical in the track
https://bugs.webkit.org/show_bug.cgi?id=299577
Summary Always-on scrollbars are not symmetrical in the track
Simon Fraser (smfr)
Reported 2025-09-25 18:32:25 PDT
Created attachment 476859 [details] Test Enable always-on scrollbars in Appearance. Load the attached page, which has a 100% width element. Note how the thumb is wedged right against the green box; there should be a px or two of breathing room. This is because we should make the scrollbars 17px wide, but they are 14px wide. <rdar://161372025>
Attachments
Test (382 bytes, text/html)
2025-09-25 18:32 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2025-09-25 18:35:25 PDT
EWS
Comment 2 2025-10-27 20:15:39 PDT
Committed 302222@main (e417ae6c5c6f): <https://commits.webkit.org/302222@main> Reviewed commits have been landed. Closing PR #51357 and removing active labels.
Robert Jenner
Comment 3 2025-10-28 19:09:50 PDT
Reopened Bugzilla. REGRESSION(302222@main) [ Tahoe ]: 14 TestWebKitAPI.CSSViewportUnits (api-tests) are constant failures, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=301587.
Simon Fraser (smfr)
Comment 4 2025-10-29 18:59:40 PDT
EWS
Comment 5 2025-10-30 08:37:21 PDT
Committed 302346@main (b279109c4a22): <https://commits.webkit.org/302346@main> Reviewed commits have been landed. Closing PR #53182 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.