Always-on scrollbars are not symmetrical in the track https://bugs.webkit.org/show_bug.cgi?id=299577 rdar://161372025

Reviewed by Aditya Keerthi.

Calling `[scrollerImp trackBoxWidth]` on a legacy scrollbar incorrectly includes the
track side gap only once, resulting in WebKit computing a scrollbar width of 14
when it should be 17.

Using +scrollerWidth avoids this problem.

* LayoutTests/platform/mac-wk2/fast/scrolling/rtl-scrollbars-animation-property-expected.txt:
* Source/WebCore/platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::scrollbarThickness):

Canonical link: https://commits.webkit.org/302222@main